--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
   <Title>ASPEN EBT</Title>
+
+  <sec>
+    <h1> Aspen's EBT Rat Solutions</h1>
+    <p>Manuelito the best group member, everyone useless.</p>
+  </sec>
 </html>
