--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <Title>ASPEN EBT</Title>
+  <Title>RATATOUILLE</Title>
   <sec>
     <h1> Aspen's EBT Rat Solutions</h1>
-    <p>Manuelito the best group member, everyone useless.</p>
+    <p>by Giacomo, Manuelito, Alvy, Julius, Andrian, Andy, Alston, Tony, Jeremy</p>
   </sec>
 </html>
